fix: :lipstick: fix overlapping of navigation elements

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -115,6 +115,10 @@
 }
 
 @media only screen and (max-width: 566px) {
+  .navLink {
+    display: none !important;
+  }
+
   .footer {
     flex-direction: column;
   }
